# togax_qt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.rst  move_window.py  presentation_example.py  pyproject.toml  testapp.py  testbed.patch  toyapp_resizing.py  update-testbed.sh
.github/workflows/: ci.yaml
examples/: buttonicon.py  dialogtest.py  fullscreenapp.py  testapp.py  testauto.py
examples/repros/: state22direct.py  state22event.py
src/togax_qt/: app.py  command.py  factory.py  fonts.py  icons.py  images.py  initialization.py  screens.py  statusicons.py  window.py
src/togax_qt/libs/: __init__.py  env.py  testing.py  utils.py
src/togax_qt/widgets/: activityindicator.py  base.py  button.py  label.py  textinput.py
tests/: test_implementation.py
tests_backend/: app.py  dialogs.py  fonts.py  icons.py  images.py  probe.py  screens.py  window.py
tests_backend/hardware/: camera.py  location.py
tests_backend/widgets/: activityindicator.py  base.py  box.py  button.py  label.py  properties.py  textinput.py
togax_qt/: __init__.py  app.py  command.py  container.py  dialogs.py  factory.py  fonts.py  icons.py  keys.py  screens.py  statusicons.py  togax.py  window.py
togax_qt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
togax_qt/libs/: __init__.py  env.py  testing.py
togax_qt/libs/qasync/: __init__.py
togax_qt/widgets/: base.py  box.py  button.py  label.py  textinput.py
