[build-system]
requires = [
    "setuptools==69.0.0",
    "setuptools_scm==8.0.4",
    "setuptools_dynamic_dependencies @ git+https://github.com/beeware/setuptools_dynamic_dependencies",
]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.0"
name = "togax-qt"
description = "An unofficial (for now) Qt backend for the Toga widget toolkit."
readme = "README.rst"
requires-python = ">= 3.8"
license.text = "New BSD"
authors = [
    {name="Xinyuan Zhou", email="johnzhou721@gmail.com"},
]
maintainers = [
    {name="Xinyuan Zhou", email="johnzhou721@gmail.com"},
]
dependencies = [
    "toga-core",
    "qasync",
    "PySide6",
]
keywords = [
    "gui",
    "widget",
    "cross-platform",
    "toga",
    "desktop",
    "qt",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]


[project.entry-points."toga.backends"]
linux = "togax_qt"
windows = "togax_qt"
macOS = "togax_qt"
freeBSD = "togax_qt"

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["togax_qt"]

[tool.coverage.paths]
source = [
    "src/togax_qt",
    "**/togax_qt",
]


[tool.setuptools]
packages = ["togax_qt"]
